--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -1,9 +1,9 @@
-name: Publish Retype powered website to Netlify
+name: Publish Retype powered website to GitHub Pages
 on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   publish:
