--- a/retype.yml
+++ b/retype.yml
@@ -3,7 +3,7 @@ output: .retype
 url: sigrax.netlify.app
 favicon : static/icon.svg
 branding:
-  title: Sigrax EAMS
+  title: Sigrax EAMS Docs
   label: v1.0
   
 links:
